Refactor index.html for layout and style enhancements
Updated HTML structure and styles for improved layout and functionality.

--- a/index.html
+++ b/index.html
@@ -1,129 +1,116 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
 <title>Our Little World 💖</title>
 
 <style>
+*{ box-sizing:border-box; }
+
 body{
   margin:0;
-  font-family: Arial, sans-serif;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
   background:#fff0f6;
 }
+
 .card{
   background:#fff;
-  margin:14px;
+  margin:12px auto;
   padding:16px;
   border-radius:14px;
+  max-width:520px;
   box-shadow:0 4px 12px rgba(0,0,0,.08);
 }
-h3{margin-top:0}
+
+h3{ margin-top:0; }
+
 button{
   width:100%;
-  padding:10px;
+  padding:12px;
   border:none;
   border-radius:10px;
   background:#ff5fa2;
   color:#fff;
-  font-weight:bold;
-}
-input,textarea{
-  width:100%;
-  padding:8px;
-  margin:6px 0;
-  border-radius:8px;
-  border:1px solid #ddd;
-}
-.chat-msg{
-  margin:6px 0;
-}
-a{color:#ff5fa2;text-decoration:none}
-#chatBox{
-  max-height: 300px;
-  overflow-y: auto;
-  padding: 6px;
+  font-weight:600;
+  font-size:15px;
 }
 
-/* Chat rows */
-.chat-row{
-  display: flex;
-  margin: 6px 0;
+button.secondary{
+  background:#eee;
+  color:#333;
 }
 
-/* Me (right side) */
-.chat-row.me{
-  justify-content: flex-end;
-}
-
-/* Partner (left side) */
-.chat-row.partner{
-  justify-content: flex-start;
-}
-
-/* Chat bubble */
-.bubble{
-  max-width: 75%;
-  padding: 10px;
-  border-radius: 14px;
-  font-size: 14px;
-}
-
-/* Me bubble */
-.chat-row.me .bubble{
-  background: #ff5fa2;
-  color: #fff;
-  border-bottom-right-radius: 4px;
-}
-
-/* Partner bubble */
-.chat-row.partner .bubble{
-  background: #f1f1f1;
-  color: #333;
-  border-bottom-left-radius: 4px;
-}
-
-/* Timestamp */
-.time{
-  font-size: 11px;
-  opacity: 0.7;
-  margin-top: 4px;
-  text-align: right;
-}
-
-select{
+input, textarea, select{
   width:100%;
   padding:10px;
+  margin:6px 0;
   border-radius:8px;
   border:1px solid #ddd;
-  margin-bottom:10px;
+  font-size:15px;
+}
+
+a{
+  color:#ff5fa2;
+  text-decoration:none;
+}
+
+.hidden{
+  display:none !important;
+}
+
+/* CHAT */
+#chatBox{
+  max-height:300px;
+  overflow-y:auto;
+  padding:4px;
+}
+
+.chat-row{
+  display:flex;
+  margin:6px 0;
+}
+
+.chat-row.me{ justify-content:flex-end; }
+.chat-row.partner{ justify-content:flex-start; }
+
+.bubble{
+  max-width:75%;
+  padding:10px;
+  border-radius:14px;
+  font-size:14px;
+}
+
+.chat-row.me .bubble{
+  background:#ff5fa2;
+  color:#fff;
+  border-bottom-right-radius:4px;
+}
+
+.chat-row.partner .bubble{
+  background:#f1f1f1;
+  color:#333;
+  border-bottom-left-radius:4px;
 }
 
 .sender{
   font-size:12px;
-  font-weight:bold;
-  margin-bottom:4px;
-  opacity:0.85;
+  font-weight:600;
+  opacity:.85;
+  margin-bottom:2px;
 }
 
+.time{
+  font-size:11px;
+  opacity:.7;
+  text-align:right;
+  margin-top:4px;
+}
+
+/* DASHBOARD */
 #dashboard button{
   margin:8px 0;
-  font-size:15px;
 }
-
-.feature button{
-  margin-top:12px;
-  background:#ddd;
-  color:#333;
-}
-  #dashboard,
-.feature{
-  width: 100%;
-  box-sizing: border-box;
-}
-
-
-  
 </style>
 </head>
 
@@ -134,336 +121,173 @@ select{
   <h3>💑 Couple Login</h3>
   <input id="codeInput" placeholder="Couple Code">
   <input id="pinInput" type="password" placeholder="PIN">
-  <button onclick="login()">Enter</button>
+  <button id="loginBtn">Enter</button>
   <p style="text-align:center">
-    <a href="#" onclick="ui.showCreate()">Create new couple 💖</a>
+    <a href="#" id="goCreate">Create new couple 💖</a>
   </p>
 </div>
 
 <!-- CREATE -->
-<div class="card" id="createCard" style="display:none">
+<div class="card hidden" id="createCard">
   <h3>✨ Create Your Space</h3>
-  <input id="newCode" placeholder="Choose Couple Code">
-  <input id="newPin" placeholder="Choose PIN">
+  <input id="newCode" placeholder="Couple Code">
+  <input id="newPin" placeholder="PIN">
   <input id="names" placeholder="Names (Alex & Sam)">
-  <button onclick="createCouple()">Create & Enter</button>
+  <button id="createBtn">Create & Enter</button>
   <p style="text-align:center">
-    <a href="#" onclick="ui.showLogin()">Back to login</a>
+    <a href="#" id="goLogin">Back to login</a>
   </p>
 </div>
 
-  <!-- WHO ARE YOU -->
-<div class="card" id="whoCard" style="display:none">
+<!-- WHO -->
+<div class="card hidden" id="whoCard">
   <h3>💖 Who are you?</h3>
-  <select id="whoSelect">
-    <option value="">Select your name</option>
-  </select>
-  <button onclick="confirmWho()">Continue</button>
+  <select id="whoSelect"></select>
+  <button id="whoConfirm">Continue</button>
 </div>
 
-  <!-- DASHBOARD -->
-<div class="card" id="dashboard" style="display:none">
+<!-- DASHBOARD -->
+<div class="card hidden" id="dashboard">
   <h3>💖 Our Little World</h3>
-
-  <button onclick="openSection('chat')">💬 Our Chat</button>
-  <button onclick="openSection('notes')">💌 Our Notes</button>
-  <button onclick="openSection('gallery')">📸 Our Gallery</button>
-  <button onclick="openSection('todo')">✅ Our To-Do / Goals</button>
-  <button onclick="openSection('timer')">⏳ Our Next Meet</button>
+  <button data-open="chat">💬 Our Chat</button>
+  <button data-open="notes">💌 Our Notes</button>
+  <button data-open="gallery">📸 Our Gallery</button>
+  <button data-open="todo">✅ Our To-Do / Goals</button>
+  <button data-open="timer">⏳ Our Next Meet</button>
 </div>
 
-  
-  
-<!-- APP -->
-<div class="card feature" id="chatSection" style="display:none">
+<!-- CHAT -->
+<div class="card hidden feature" id="chat">
   <h3>💬 Our Chat</h3>
   <div id="chatBox"></div>
   <input id="msgInput" placeholder="Say something sweet 💕">
-  <button onclick="sendMessage()">Send</button>
-  <button onclick="backToDashboard()">⬅ Back</button>
+  <button id="sendBtn">Send</button>
+  <button class="secondary" data-back>⬅ Back</button>
 </div>
 
-  <div class="card feature" id="notesSection" style="display:none">
-  <h3>💌 Our Notes</h3>
-  <p>Coming soon…</p>
-  <button onclick="backToDashboard()">⬅ Back</button>
-</div>
-
-  <div class="card feature" id="gallerySection" style="display:none">
-  <h3>📸 Our Gallery</h3>
-  <p>Coming soon…</p>
-  <button onclick="backToDashboard()">⬅ Back</button>
-</div>
-
-  <div class="card feature" id="todoSection" style="display:none">
-  <h3>✅ Our Goals</h3>
-  <p>Coming soon…</p>
-  <button onclick="backToDashboard()">⬅ Back</button>
-</div>
-
-
-<div class="card feature" id="timerSection" style="display:none">
-  <h3>⏳ Our Next Meet</h3>
-  <p>Coming soon…</p>
-  <button onclick="backToDashboard()">⬅ Back</button>
-</div>
-
+<!-- PLACEHOLDERS -->
+<div class="card hidden feature" id="notes"><h3>💌 Notes</h3><p>Coming soon…</p><button class="secondary" data-back>⬅ Back</button></div>
+<div class="card hidden feature" id="gallery"><h3>📸 Gallery</h3><p>Coming soon…</p><button class="secondary" data-back>⬅ Back</button></div>
+<div class="card hidden feature" id="todo"><h3>✅ Goals</h3><p>Coming soon…</p><button class="secondary" data-back>⬅ Back</button></div>
+<div class="card hidden feature" id="timer"><h3>⏳ Next Meet</h3><p>Coming soon…</p><button class="secondary" data-back>⬅ Back</button></div>
 
 <script>
-/* =====================================================
-   CONFIG
-===================================================== */
+document.addEventListener("DOMContentLoaded", () => {
+
 const API_URL = "https://script.google.com/macros/s/AKfycbxd6J1dUe78TfMWJ5wFdNNhazqZ6PsDoSjeeU4rTa71SmgExvsyNYUGr5PSkQAQxRSI/exec";
+const CHAT_INTERVAL = 3000;
 
-/* =====================================================
-   STATE
-===================================================== */
 const state = {
-  coupleCode: null,
-  myName: null,
-  partnerName: null,
-  allNames: [],
-  chatTimer: null
+  coupleCode:null,
+  myName:null,
+  allNames:[],
+  timer:null
 };
 
-  const el = {
-  dashboard: document.getElementById("dashboard"),
-  chat: document.getElementById("chatSection"),
-  notes: document.getElementById("notesSection"),
-  gallery: document.getElementById("gallerySection"),
-  todo: document.getElementById("todoSection"),
-  timer: document.getElementById("timerSection")
-};
+const $ = id => document.getElementById(id);
+const sections = ["loginCard","createCard","whoCard","dashboard","chat","notes","gallery","todo","timer"];
 
-  
-/* =====================================================
-   API HELPER (GET ONLY – CORS SAFE)
-===================================================== */
-function apiGet(params){
-  const qs = new URLSearchParams(params).toString();
-  return fetch(API_URL + "?" + qs)
-    .then(res => res.json());
+function show(id){
+  sections.forEach(s => $(s).classList.add("hidden"));
+  $(id).classList.remove("hidden");
 }
 
-/* =====================================================
-   UI
-===================================================== */
-const ui = {
-  showLogin(){
-    loginCard.style.display = "block";
-    createCard.style.display = "none";
-    app.style.display = "none";
-  },
-  showCreate(){
-    loginCard.style.display = "none";
-    createCard.style.display = "block";
-  },
-  showApp(){
-    loginCard.style.display = "none";
-    createCard.style.display = "none";
-    app.style.display = "block";
-  },
-  
- renderChat(messages) {
-  if (!Array.isArray(messages)) return;
-
-  chatBox.innerHTML = messages.map(m => {
-    const sender = m[2];
-    const msg    = m[3];
-    const time   = formatTime(m[1]);
-    const mine   = sender === state.myName;
-
-    return `
-      <div class="chat-row ${mine ? 'me' : 'partner'}">
-        <div class="bubble">
-          <div class="sender">${sender}</div>
-          <div class="text">${msg}</div>
-          <div class="time">${time}</div>
-        </div>
-      </div>
-    `;
-  }).join("");
-
-  chatBox.scrollTop = chatBox.scrollHeight;
+function api(params){
+  return fetch(API_URL + "?" + new URLSearchParams(params))
+    .then(r => r.json());
 }
 
+/* LOGIN */
+$("loginBtn").onclick = () => {
+  api({
+    action:"login",
+    code:$("codeInput").value.trim(),
+    pin:$("pinInput").value.trim()
+  }).then(res=>{
+    if(!res.ok) return alert("Wrong details 💔");
 
-};
+    state.coupleCode = $("codeInput").value.trim();
+    state.allNames = (res.names||"").split("&").map(n=>n.trim());
+    const saved = localStorage.getItem("who_"+state.coupleCode);
 
-/* =====================================================
-   AUTH
-===================================================== */  
-  function login() {
-  apiGet({
-    action: "login",
-    code: codeInput.value.trim(),
-    pin: pinInput.value.trim()
-  }).then(res => {
-    if (!res.ok) {
-      alert("Wrong couple code or PIN 💔");
-      return;
-    }
-
-    state.coupleCode = codeInput.value.trim();
-
-    // 💖 Split names from backend
-    state.allNames = (res.names || "")
-      .split("&")
-      .map(n => n.trim())
-      .filter(Boolean);
-
-    // Try restore identity
-    const saved = localStorage.getItem("who_" + state.coupleCode);
-
-    if (saved && state.allNames.includes(saved)) {
-      setIdentity(saved);
-      showDashboard();
-      startChatPolling();
-    } else {
-      showWhoSelector();
+    if(saved && state.allNames.includes(saved)){
+      state.myName = saved;
+      show("dashboard");
+      startChat();
+    }else{
+      $("whoSelect").innerHTML = state.allNames.map(n=>`<option>${n}</option>`).join("");
+      show("whoCard");
     }
   });
-}
+};
 
-
-function createCouple(){
-  apiGet({
-    action: "create",
-    code: newCode.value,
-    pin: newPin.value,
-    names: names.value
-  }).then(res => {
-    if(res.ok){
-      codeInput.value = newCode.value;
-      pinInput.value = newPin.value;
-      login();
-    } else {
-  alert(res.msg || "Unable to create couple space");
-}
+$("createBtn").onclick = () => {
+  api({
+    action:"create",
+    code:$("newCode").value,
+    pin:$("newPin").value,
+    names:$("names").value
+  }).then(res=>{
+    if(!res.ok) return alert(res.msg||"Error");
+    $("codeInput").value = $("newCode").value;
+    $("pinInput").value = $("newPin").value;
+    show("loginCard");
   });
-}
+};
 
-  function showWhoSelector() {
-  whoSelect.innerHTML =
-    `<option value="">Select your name</option>` +
-    state.allNames.map(n =>
-      `<option value="${n}">${n}</option>`
-    ).join("");
+$("goCreate").onclick = e => (e.preventDefault(), show("createCard"));
+$("goLogin").onclick  = e => (e.preventDefault(), show("loginCard"));
 
-  loginCard.style.display = "none";
-  createCard.style.display = "none";
-  app.style.display = "none";
-  whoCard.style.display = "block";
-}
+$("whoConfirm").onclick = () => {
+  state.myName = $("whoSelect").value;
+  localStorage.setItem("who_"+state.coupleCode, state.myName);
+  show("dashboard");
+  startChat();
+};
 
-  function confirmWho() {
-  const selected = whoSelect.value;
-  if (!selected) {
-    alert("Please select your name 💖");
-    return;
-  }
+/* DASHBOARD NAV */
+document.querySelectorAll("[data-open]").forEach(b=>{
+  b.onclick = ()=> show(b.dataset.open);
+});
+document.querySelectorAll("[data-back]").forEach(b=>{
+  b.onclick = ()=> show("dashboard");
+});
 
-  setIdentity(selected);
-
-  localStorage.setItem(
-    "who_" + state.coupleCode,
-    selected
-  );
-
-  whoCard.style.display = "none";
-  showDashboard();
-  startChatPolling();
-}
-
-  function setIdentity(me) {
-  state.myName = me;
-  state.partnerName =
-    state.allNames.find(n => n !== me) || "Partner";
-}
-
-  function hideAllSections() {
-  el.dashboard.style.display = "none";
-  el.chat.style.display = "none";
-  el.notes.style.display = "none";
-  el.gallery.style.display = "none";
-  el.todo.style.display = "none";
-  el.timer.style.display = "none";
-}
-
-function showDashboard() {
-  hideAllSections();
-  el.dashboard.style.display = "block";
-}
-
-function openSection(name) {
-  hideAllSections();
-  el[name].style.display = "block";
-}
-
-function backToDashboard() {
-  showDashboard();
-}
-
-  
-/* =====================================================
-   CHAT
-===================================================== */
-function sendMessage() {
-  const msg = msgInput.value.trim();
-  if (!msg) return;
-
-  apiGet({
-    action: "chat",
-    code: state.coupleCode,
-    sender: state.myName,
-    msg: msg
-  }).then(() => {
-    msgInput.value = "";
-  });
-}
-
-const CHAT_REFRESH_INTERVAL = 3000;
-
-function startChatPolling() {
-  // 🔒 ensure only one interval exists
-  if (state.chatTimer) {
-    clearInterval(state.chatTimer);
-    state.chatTimer = null;
-  }
-
-  // Load immediately
-  loadChat();
-
-  // Start polling
-  state.chatTimer = setInterval(() => {
-    // Safety guard
-    if (!state.coupleCode || !state.myName) return;
-    loadChat();
-  }, CHAT_REFRESH_INTERVAL);
-}
-
+/* CHAT */
+$("sendBtn").onclick = () => {
+  const msg = $("msgInput").value.trim();
+  if(!msg) return;
+  api({ action:"chat", code:state.coupleCode, sender:state.myName, msg });
+  $("msgInput").value="";
+};
 
 function loadChat(){
-  apiGet({
-    action: "fetch",
-    type: "Chat",
-    code: state.coupleCode
-  }).then(ui.renderChat);
-  console.log("Fetching chat at", new Date().toLocaleTimeString());
-}
-
-function formatTime(value){
-  const d = new Date(value);
-  return d.toLocaleTimeString([], {
-    hour: "2-digit",
-    minute: "2-digit"
+  api({ action:"fetch", type:"Chat", code:state.coupleCode })
+  .then(rows=>{
+    if(!Array.isArray(rows)) return;
+    $("chatBox").innerHTML = rows.map(r=>{
+      const mine = r[2]===state.myName;
+      return `
+      <div class="chat-row ${mine?"me":"partner"}">
+        <div class="bubble">
+          <div class="sender">${r[2]}</div>
+          ${r[3]}
+          <div class="time">${new Date(r[1]).toLocaleTimeString([], {hour:"2-digit", minute:"2-digit"})}</div>
+        </div>
+      </div>`;
+    }).join("");
+    $("chatBox").scrollTop = $("chatBox").scrollHeight;
   });
 }
 
-/* =====================================================
-   INIT
-===================================================== */
-ui.showLogin();
+function startChat(){
+  clearInterval(state.timer);
+  loadChat();
+  state.timer = setInterval(loadChat, CHAT_INTERVAL);
+}
+
+show("loginCard");
+});
 </script>
 
 </body>
